# TesseractSim

./: CMakeLists.txt  README.md
analysis/: CMakeLists.txt  EnergyDepVSIntialEnergy.cpp  PlotSpectra.cpp
analysis/ReSampler/: CMakeLists.txt  ReSampler.cc
analysis/RockSpecAnalyzer/: RockSpecAnalyzer.cc
analysis/include/: MCPulse.h  TrackReader.h
analysis/notebook/: RockSpectrumGenerator.ipynb
analysis/src/: TrackReader.cpp
helpful_tools/: Combine.C  GetGammaK40.C  GetGammaTh232.C  GetGammaU238.C  GetNeutronTh232.C  GetNeutronUnat.C
include/: GeneratorAction.hh  GeneratorMessenger.hh  GeoWalls.hh  Geography.hh  GeometryConstructionMessenger.hh  GpsInMaterial.hh  MuonGenerator.hh  MuonGeneratorMessenger.hh  RunAction.hh  VMuonSource.hh
macros/: CsDispenser_K40.mac  CsDispenser_Th232.mac  CsDispenser_U238.mac  Flux_gamma_K40.mac  Flux_gamma_Th232.mac  Flux_gamma_U238.mac  Flux_neutron_Th232.mac  Flux_neutron_Unat.mac  dummyDetectorFlux.mac  geantino.mac  gpsInMaterial_Cu_Co60.mac  gpsInMaterial_PE.mac  gpsInMaterial_PE_Co60.mac  gpsInMaterial_Pb_Co60.mac  gpsInMaterial_PureCu_Co60.mac  gpsInMaterial_SS.mac  gpsInMaterial_SS_Co60.mac  gpsInMaterial_Ti.mac  gpsInMaterial_Ti_Co60.mac  gpsInMaterial_copper.mac  gpsInMaterial_lead.mac  init_vis.mac  internal_MXC_Co60.mac  internal_MXC_K40.mac  internal_MXC_Pb210.mac  internal_MXC_Th232.mac  internal_MXC_U238.mac  internal_PE_Co60.mac  internal_PE_K40.mac  internal_PE_Pb210.mac  internal_PE_Th232.mac  internal_PE_U238.mac  internal_Pb_Co60.mac  internal_Pb_K40.mac  internal_Pb_Pb210.mac  internal_Pb_Th232.mac  (+20 more)
(+17 files in other folders)
